@@ -1,3 +1,15 @@
+2006-01-01  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* openapp.in: Remove IFS setting and search again ... it prevented
+	windows paths from working (which was why it was removed in the first
+	place).  Also removed insertion of '.' as a path to search ... since
+	this is generally considered a security flaw.
+	Removed some code to search in odd subdirectories.
+	Added code to search the directories specified in PATH as well as the
+	standard locations.  Does this need a different path separator on
+	mingw?  Can't remember and I don't currently have a windows system to
+	test on.
+
 2005-12-30  Adam Fedor  <fedor@gnu.org>
 
 	* openapp.in: Re-add IFS setting and search in current dir
